--- a/hcaptcha.html
+++ b/hcaptcha.html
@@ -9,9 +9,12 @@
       margin: 0;
       height: 100vh;
       background: #090221;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    }
+    #c {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 20px;
     }
   </style>
 </head>
