--- a/hcaptcha.html
+++ b/hcaptcha.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Solar hCaptcha Harvester</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <script src="https://hcaptcha.com/1/api.js?onload=hcOnLoad&render=explicit" async defer></script>
   <style>
