--- a/login.html
+++ b/login.html
@@ -315,7 +315,7 @@
         </div>
         
         <h1>Welcome to <span style="color: #00ffa3;">Solar</span></h1>
-        <p class="subtitle">You're one step away from unlocking the full power of Solar bot.<br><br>Select your preferred login method to continue:</p>
+        <p class="subtitle">Select your preferred login method to continue</p>
         
         <div class="button-container">
             <a href="#" class="connect-btn discord-btn" onclick="connectWithDiscord(this)">
@@ -330,7 +330,7 @@
         </div>
 
         <p class="footer-text">
-            By continuing, you agree to Solar's <a href="#" style="color: #00ffa3; text-decoration: none;">Terms of Service</a> and <a href="#" style="color: #00ffa3; text-decoration: none;">Privacy Policy</a>
+            © 2025 Solar Bot. All rights reserved.</a>
         </p>
     </div>
 
