--- a/login.html
+++ b/login.html
@@ -67,6 +67,7 @@
                 0 20px 40px rgba(0, 0, 0, 0.3),
                 inset 0 1px 0 rgba(255, 255, 255, 0.05);
             animation: containerEnter 1s ease-out;
+            transition: transform 0.1s ease-out;
         }
 
         @keyframes containerEnter {
@@ -399,7 +400,7 @@
                     const rotateX = (y / rect.height) * 1.2;
                     const rotateY = (x / rect.width) * 1.2;
                     
-                    container.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+                    container.style.transform = `perspective(1000px) rotateX(${rotateX * 1.5}deg) rotateY(${rotateY * 1.5}deg)`;
                 });
                 
                 // Reset transform when mouse leaves
