--- a/login.html
+++ b/login.html
@@ -109,13 +109,15 @@
         .connect-btn::before {
             content: '';
             position: absolute;
-            inset: 0 -100% 0 0;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
             background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.05), transparent);
-            transition: transform 0.6s ease;
-            transform: translateX(-100%);
+            transition: left 0.6s ease;
         }
 
-        .connect-btn:hover::before { transform: translateX(200%); }
+        .connect-btn:hover::before { left: 100%; }
 
         .whop-btn {
             background: linear-gradient(135deg, rgba(0, 255, 163, 0.08), rgba(0, 255, 163, 0.04));
@@ -233,7 +235,7 @@
                 const r = c.getBoundingClientRect();
                 const x = (e.clientX - r.left - r.width / 2) / r.width;
                 const y = (e.clientY - r.top - r.height / 2) / r.height;
-                c.style.transform = `perspective(1000px) rotateX(${-y * 2}deg) rotateY(${x * 2}deg)`;
+                c.style.transform = `perspective(1000px) rotateX(${-y * 3.5}deg) rotateY(${x * 3.5}deg)`;
             });
             
             document.addEventListener('mouseleave', reset);
